# MGDS

./: README.md
Code/: CMakeLists.txt  Header.h  main.cpp
Code/GDS/: Algo.cpp  Algo.h  GDS.cpp  GDS.h  GDSMultiPrecision.cpp  GDSMultiPrecision.h  GFirmCore.cpp  GFirmCore.h  Stats.cpp  Stats.h
Code/Graphs/: MLG.cpp  MLG.h
Code/Structs/: IntHeap.cpp  IntHeap.h  MixHeap.cpp  MixHeap.h  MixHeapMp.cpp  MixHeapMp.h  RealHeap.h  SetHeap.cpp  SetHeap.h
Code/Utils/: ArrOps.h  StrOps.h  Timer.h
Datasets/Amazon/: statistics.txt
Datasets/DBLP-large/: ConvertDL2MLG.py
Datasets/DBLP-small/: l0.txt  l1.txt  l2.txt  l3.txt  l4.txt  l5.txt  l6.txt  l7.txt  l8.txt  l9.txt  mlg.conf  statistics.txt
Datasets/FAO/: l0.txt  l1.txt  l10.txt  l100.txt  l101.txt  l102.txt  l103.txt  l104.txt  l105.txt  l106.txt  l107.txt  l108.txt  l109.txt  l11.txt  l110.txt  l111.txt  l112.txt  l113.txt  l114.txt  l115.txt  l116.txt  l117.txt  l118.txt  l119.txt  l12.txt  l120.txt  l121.txt  l122.txt  l123.txt  l124.txt  l125.txt  l126.txt  l127.txt  l128.txt  l129.txt  l13.txt  l130.txt  l131.txt  l132.txt  l133.txt  (+322 more)
Datasets/Friendfeed/: l0.txt  (+1 more)
Scripts/: characteristics_wrt_q.py  compare_with_fc.py  ds_runtime.py  effectiveness_of_fast.py  effectiveness_of_mgds.py  get_graph_stats.py  merge_file.py  run_ds.py  run_ds_for_effec_tests.py  run_fast_test.py  run_scalability_test.py  scalability.py  split_so.py  utils.py
output/: ds_stats.txt  fast_vs_case1.txt  fast_vs_case2.txt  graph_info.txt  runtime.txt  sca_edge_case34.txt  sca_edge_fast.txt  sca_layer_case34.txt  sca_layer_fast.txt
(+20 files in other folders)
